--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
-title: "Notes for Che5314 UCV"
-author: "Ali G Lara"
+title: "Notes for Che5314 course @ UCV"
+author: "Ali G. Lara"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
@@ -12,9 +12,9 @@ description: "This is my notes recopilation for the course of Chemical Reaction 
 
 # Introducion {-}
 
-This is an _online_ book written in **Markdown** and **LaTeX**. I delivered my personal notes that I used to use during my lectures on Chemical Reactor Design at the Central University of Venezuela, Caracas, Venezuela.
+This is an _online_ book written in **Markdown** and **LaTeX** where I published the personal notes that I used to use while I was lecturing Chemical Reactor Design at the Central University of Venezuela, Caracas, Venezuela.
 
-Because it is a recompilation of notes, this material is not a comprehensive book where you will find details in concepts of the area. However, it is a relatively straightforward guide for an intermediate undergraduate student of Chemical Engineering.
+Because it is an informal recompilation of my notes, this material is not a comprehensive book where you will find details in concepts of the area. However, it is a relatively straightforward guide for an intermediate undergraduate student of Chemical Engineering who has taking an introductory course on Chemical reaction kinetics.
 
-Besides concepts and equations, I added several typical problems solved in Python. Most of the illustrations given are modifications of examples taken from textbooks like Fogler or Roberts.
+Besides concepts and mathematical deductions, I added several typical problems solved in Python. Most of the illustrations given are modifications of examples taken from classic textbooks like [Fogler](https://www.google.com/books/edition/Essentials_of_Chemical_Reaction_Engineer/eyGKAwAAQBAJ?hl=en&gbpv=0) or [Roberts](https://www.google.com/books/edition/Chemical_Reactions_and_Chemical_Reactors/8jBuDwAAQBAJ?hl=en&gbpv=0).
 
