--- a/preamble.tex
+++ b/preamble.tex
@@ -1,5 +1,7 @@
 \usepackage{booktabs}
 \usepackage{amsthm}
+\usepackage{graphicx}
+\usepackage{tikz}
 \usepackage{chemfig}
 \makeatletter
 \def\thm@space@setup{%
