--- a/01-mod01.Rmd
+++ b/01-mod01.Rmd
@@ -84,9 +84,7 @@ It is essential to know that:
 
 Consider next reversible reaction
 
-<center>
-![](docs/figures/eq1.png){width=30%}
-</center>
+![](figures/eq1.png){width=30%}
 
 The forward rate reaction in terms of molar concentrations of reactants A and B will be: 
 \begin{gather*}
