--- a/codes/lect_001BatchReactorParallel.ipynb
+++ b/codes/lect_001BatchReactorParallel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fifth-clothing",
+   "id": "naughty-telling",
    "metadata": {},
    "source": [
     "Batch reactor, multiple reactions\n",
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "assumed-observation",
+   "id": "opened-dining",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "agreed-diesel",
+   "id": "important-librarian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alert-committee",
+   "id": "obvious-divorce",
    "metadata": {},
    "source": [
     "Let's solve the problem for two values of k1"
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "unlikely-overhead",
+   "id": "english-adelaide",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "desirable-point",
+   "id": "vanilla-moscow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,8 +92,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "potential-invitation",
+   "execution_count": 10,
+   "id": "dress-finance",
    "metadata": {},
    "outputs": [
     {
@@ -122,13 +122,13 @@
     "\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "liquid-execution",
+   "id": "sublime-dakota",
    "metadata": {},
    "outputs": [],
    "source": []
