--- a/book.bib
+++ b/book.bib
@@ -8,3 +8,195 @@
   note = {ISBN 978-1498716963},
   url = {http://yihui.org/knitr/},
 }
+@book{Moran:2014aa,
+	Author = {Moran, Michael J and Shapiro, Howard N and Boettner, Daisie D and Bailey, Margaret B},
+	Date-Added = {2015-08-30 01:10:41 +0000},
+	Date-Modified = {2015-08-30 01:11:25 +0000},
+	Edition = {8th},
+	Publisher = {Wiley},
+	Title = {Fundamentals of engineering thermodynamics},
+	Year = {2014}}
+
+@book{Lyons:2010aa,
+	Author = {Lyons, William},
+	Date-Added = {2015-08-27 16:57:53 +0000},
+	Date-Modified = {2015-08-27 16:58:34 +0000},
+	Publisher = {Gulf Publishing},
+	Title = {Working guide to Petroleum and Natural gas production engineering},
+	Year = {2010}}
+
+@book{Razak:2007aa,
+	Author = {Razak, A. M. Y.},
+	Date-Added = {2015-08-27 15:55:45 +0000},
+	Date-Modified = {2015-08-27 15:57:07 +0000},
+	Publisher = {Woodhead Publishing},
+	Title = {Industrial gas turbines},
+	Year = {2007}}
+
+@book{smith2007,
+	Author = {Smith, J. H. and Van Ness, H. C. and Abbot, M. M.},
+	Date-Added = {2015-08-26 17:16:25 +0000},
+	Date-Modified = {2015-08-26 17:18:48 +0000},
+	Edition = {S\'eptima},
+	Publisher = {McGraw-Hill Interamericana},
+	Title = {Introducci\'on a la Termodin\'amica en Ingenier\'ia Qu\'imica},
+	Year = {2007}}
+
+@book{matsoukas2013,
+	Author = {Matsoukas, Themis},
+	Date-Added = {2015-08-25 13:51:35 +0000},
+	Date-Modified = {2015-08-25 13:53:26 +0000},
+	Publisher = {Prentice Hall},
+	Title = {Fundamentals of Chemical Engineering Thermodynamics},
+	Year = {2013}}
+
+@book{elliot2012,
+	Author = {Elliot, J. Richard and Lira, Carl T.},
+	Date-Added = {2015-08-25 13:48:23 +0000},
+	Date-Modified = {2015-08-25 13:50:40 +0000},
+	Edition = {Second Edition},
+	Publisher = {Prentice Hall},
+	Title = {Introductory Chemical Engineering Thermodynamics},
+	Year = {2012}}
+
+@article{hatch1969,
+	Author = {Hatch, LF},
+	Journal = {Hydrocarbon Processing},
+	Number = {2 P 1},
+	Pages = {77},
+	Publisher = {GULF PUBL CO BOX 2608, HOUSTON, TX 77252-2608},
+	Title = {A chemical view of refining},
+	Volume = {48},
+	Year = {1969}}
+
+@article{shoemaker1955,
+	Author = {Shoemaker, B. H. and d'Ouville, E. L. and Marschner, Robert F.},
+	Journal = {Journal of Chemical Education},
+	Number = {1},
+	Pages = {30},
+	Title = {Recent advances in petroleum refining},
+	Volume = {32},
+	Year = {1955}}
+
+@book{ancheyta2011,
+	Author = {Ancheyta, Jorge},
+	Publisher = {Wiley},
+	Title = {Modeling and Simulation of Catalytic Reactors for Petroleum Refining},
+	Year = {2011}}
+
+@book{elnashaie2007,
+	Author = {Elnashaie, Said SEH and Uhlig, Frank},
+	Publisher = {Springer Science \& Business Media},
+	Title = {Numerical Techniques for Chemical and Biological Engineers Using MATLAB{\textregistered}: A Simple Bifurcation Approach},
+	Year = {2007}}
+
+@book{fogler2008,
+	Author = {Fogler, H. Scott},
+	Edition = {4ta},
+	Publisher = {Pearson Prentice Hall},
+	Title = {Elementos de Ingenier{\'\i}a de las reacciones qu{\'\i}micas},
+	Year = {2008}}
+
+@book{froment2011,
+	Author = {Froment, G. and Bischoff, K. and De Wilde, Juraya},
+	Publisher = {John Wiley \& Sons, INC},
+	Title = {Chemical Reactor Analysis and Design},
+	Year = {2011}}
+
+@book{hayes2013,
+	Author = {Hayes, R. E. and Mmbaga, J. P.},
+	Edition = {2nd},
+	Publisher = {CRC Press},
+	Title = {Introduction to Chemical Reactor Analysis},
+	Year = {2013}}
+
+@book{hill1977,
+  Author =       {Hill, C. Jr.},
+  Title =        {An Introduction to Chemical Engineering Kinetics \& Reactor Design},
+  Publisher =    {USA: John Wiley \& Sons},
+  Pages =        {594 p},
+  Year =         {1977},
+  isbn =         {0-471-39609-5} }
+  
+
+@book{hill2014,
+	Author = {Hill, Charles G. Jr and Root, Thatcher W.},
+	Edition = {Second},
+	Publisher = {Wiley},
+	Title = {Introduction to Chemical Engineering Kinetics \& Reactor Design},
+	Year = {2014}}
+
+@book{himmelblau1968,
+	Author = {Himmelblau, David D. and Bischoff, Kenneth B.},
+	Publisher = {John Wiley \& Sons, INC},
+	Title = {Process Analysis and Simulation},
+	Year = {1968}}
+
+@book{kaes2000,
+	Author = {Kaes, Gerald L.},
+	Publisher = {Kaes Enterprise, Inc},
+	Title = {Refinery Process Modeling},
+	Year = {2000}}
+
+@book{kandiyoti2009,
+	Author = {Kandiyoti, Rafael},
+	Publisher = {Bookboon},
+	Title = {Fundamentals of Reaction Engineering},
+	Year = {2009}}
+
+@book{levenspiel2004,
+	Author = {Levenspiel, Octave},
+	Edition = {Third},
+	Publisher = {Limusa Wiley},
+	Title = {Chemical Reaction Engineering},
+	Year = {2004}}
+
+@book{matar2001,
+	Address = {Woburn},
+	Author = {Matar, Sami and Hatch, Lewis F.},
+	Publisher = {Gulf Professional Publishing},
+	Series = {Chemistry of Petrochemical Processes (Second Edition)},
+	Title = {Chemistry of Petrochemical Processes},
+	Year = {2001}}
+
+@book{missen1999,
+	Author = {Missen, Ronald and Mims, Charles and Saville. Bradley},
+	Publisher = {John Wiley \& Sons},
+	Title = {Introduction to Chemical Reaction Engineering and Kinetics},
+	Year = {1999}}
+
+@book{rawling2002,
+	Author = {Rawling, J. and Ekerdt, J.},
+	Publisher = {Nob Hill Publising},
+	Title = {Chemical Reactor Analysis and Design Fundamentals},
+	Year = {2002}}
+
+@book{roberts2009,
+	Author = {Roberts, George.},
+	Publisher = {John Wiley \& Sons},
+	Title = {Chemical Reactions and Chemical Reactors},
+	Year = {2009}}
+
+@book{schmidt1998,
+	Author = {Schmidt, Lanny},
+	Publisher = {Oxford University Press},
+	Title = {The Engineering of Chemical Reactors},
+	Year = {1998}}
+
+@book{walas1989,
+	Author = {Walas, Stanley},
+	Publisher = {Butterworth Publishers},
+	Title = {Reaction Kinetics for Chemical Engineers},
+	Year = {1989}}
+
+@book{westerterp1984,
+	Author = {Westertep, K. and Van Swaaij, W. and Beenackers, A.},
+	Publisher = {John Wiley \& Sons},
+	Title = {Chemical Reactor Design and Operation},
+	Year = {1984}}
+
+@mastersthesis{fernandez1984,
+	Author = {Fernandez, N. and Gil, R. and Hurtado, N. and Seijas, A.},
+	School = {Escuela de Ingenier\'ia Qu\'imica, U.C.V},
+	Title = {Control de la Unidad de Crudo Atmosf\'erico},
+	Year = {1984}}
